--- a/fixtures/science/grade5-2025-science-easy.json
+++ b/fixtures/science/grade5-2025-science-easy.json
@@ -51,18 +51,18 @@
             },
             {
               "uuid": "7a37853c-34a2-468d-aab2-7812da7d6c7f",
-              "title": "Câu hỏi về Sự sinh sản",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Kiến thức về sự sinh sản là gì?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Sự sinh sản.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:12.000Z"
             }
           ]
@@ -109,18 +109,18 @@
             },
             {
               "uuid": "b928a319-aeaf-4226-9651-30ea7da887a6",
-              "title": "Câu hỏi về Vệ sinh tuổi dậy thì",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Vệ sinh tuổi dậy thì có tầm quan trọng như thế nào?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Vệ sinh tuổi dậy thì.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:13.000Z"
             }
           ]
@@ -273,18 +273,18 @@
             },
             {
               "uuid": "4c59bb71-3bef-4503-9588-a7c8e8c3f4a8",
-              "title": "Câu hỏi về Tính chất của nước",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Nước có những tính chất nào?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Tính chất của nước.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:12.000Z"
             }
           ]
@@ -331,18 +331,18 @@
             },
             {
               "uuid": "72201e00-0b3d-4598-aad6-1748c9ab5adb",
-              "title": "Câu hỏi về Sự chuyển thể của nước",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Nước có thể chuyển thể như thế nào?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Sự chuyển thể của nước.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:13.000Z"
             }
           ]
@@ -495,18 +495,18 @@
             },
             {
               "uuid": "de0c8f5f-5c41-4dcd-bb9a-a3938f30fbda",
-              "title": "Câu hỏi về Cơ quan sinh sản của thực vật có hoa",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Cơ quan sinh sản của thực vật có hoa gồm những bộ phận nào?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Cơ quan sinh sản của thực vật có hoa.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:12.000Z"
             }
           ]
@@ -553,18 +553,18 @@
             },
             {
               "uuid": "b5845127-5478-4a5c-8f81-be5627cc6279",
-              "title": "Câu hỏi về Sự sinh sản của thực vật có hoa",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Thực vật có hoa sinh sản bằng cách nào?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Sự sinh sản của thực vật có hoa.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:13.000Z"
             }
           ]
@@ -717,18 +717,18 @@
             },
             {
               "uuid": "a8df47d0-adfa-4ad5-9098-196ae6f43110",
-              "title": "Câu hỏi về Môi trường",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Môi trường là gì?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Môi trường.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:12.000Z"
             }
           ]
@@ -775,18 +775,18 @@
             },
             {
               "uuid": "8ffe945e-dae6-48d9-893c-ced52ab7004b",
-              "title": "Câu hỏi về Tài nguyên thiên nhiên",
+              "title": "Phân tích về sự sinh sản",
               "type": "multiple_choice",
               "points": 1,
-              "question": "Tài nguyên thiên nhiên bao gồm những gì?",
+              "question": "Tại sao sự sinh sản lại quan trọng đối với các loài sinh vật?",
               "options": {
-                "A": "Lựa chọn A - Đây là đáp án đúng",
-                "B": "Lựa chọn B - Đây là đáp án sai",
-                "C": "Lựa chọn C - Đây là đáp án sai",
-                "D": "Lựa chọn D - Đây là đáp án sai"
+                "A": "Vì giúp duy trì nòi giống và tạo ra thế hệ mới",
+                "B": "Vì giúp sinh vật lớn lên",
+                "C": "Vì giúp sinh vật ăn uống",
+                "D": "Vì giúp sinh vật di chuyễn"
               },
               "correctOption": "A",
-              "hint": "Hãy suy nghĩ về kiến thức cơ bản của Tài nguyên thiên nhiên.",
+              "hint": "Sự sinh sản giúp duy trì nòi giống và tạo ra thế hệ mới, đảm bảo sự tồn tại của các loài.",
               "created_at": "2025-01-01T00:00:13.000Z"
             }
           ]
